--- a/src/Components/AddBill/AddBill.sass
+++ b/src/Components/AddBill/AddBill.sass
@@ -1,7 +1,8 @@
 .add-bill-container
   display: block
   margin: auto
-  width: 350px
+  max-width: 350px
+  width: 100%
 
 .add-bill-form-control
   display: block
