--- a/src/Components/BillTotal/BillTotal.sass
+++ b/src/Components/BillTotal/BillTotal.sass
@@ -1,5 +1,6 @@
 .bill-total-container
-  width: 350px
+  max-width: 350px
+  width: 100%
   margin: auto
   margin-top: 25px
   margin-bottom: 5px
@@ -10,7 +11,8 @@
   margin-left: 10px
 
 .total-saved-container
-  width: 350px
+  max-width: 350px
+  width: 100%
   margin: auto
   margin-top: 5px
   margin-bottom: 25px
