--- a/src/Components/App/App.sass
+++ b/src/Components/App/App.sass
@@ -2,8 +2,10 @@
   padding: 25px
   box-shadow: 2px 5px 20px gray
   border-radius: 10px
-  width: 500px  
+  max-width: 500px  
+  width: 100%
   margin: auto
   margin-top: 100px
   background-color: rgba(255, 255, 255, 0.8)
   box-sizing: border-box
+
