--- a/src/Components/App/App.sass
+++ b/src/Components/App/App.sass
@@ -4,8 +4,15 @@
   border-radius: 10px
   max-width: 500px  
   width: 100%
-  margin: auto
+  //margin: auto
   margin-top: 100px
+  margin-bottom: 100px
   background-color: rgba(255, 255, 255, 0.8)
   box-sizing: border-box
+
+
+@media (max-width: 767px)
+  .bills-container
+    margin-top: 0px
+    margin-bottom: 0px
 
